css/style.css
* {
  box-sizing: border-box;
  overflow: hidden;
}

body {
  background-color: snow;
  margin: 0;
  color: #ffffff;
  font-family: "Montserrat", sans-serif;
  background: url("bg3.png") no-repeat center / cover, #080f1a63;
  background-blend-mode: multiply;
  user-select: none;
  height: 100vh;
}
main {
  height: 100vh;
}
.wrapper {
  height: 100%;
  margin: 0 auto;
  padding: 3% 0;
  width: 80%;
  display: none;
  flex-direction: column;
  justify-content: space-between;
}
.topbar {
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.topbar__controls {
  height: 50px;
  width: 500px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
}
.topbar__change {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 55px;
  height: 50px;
  background-color: #ffffff3d;
  border: 1px solid #aeb5b97c;
  border-radius: 5px;
}
#topbar__lang {
  padding: 18px 20px;
  margin-right: 10px;
  border: 1px solid #aeb5b97c;
  border-radius: 5px;
  background-color: #ffffff3d;
  color: #fff;
  cursor: pointer;
}
#topbar__lang:focus-visible {
  outline: none;
}
#topbar__lang option {
  border: 1px solid #aeb5b97c;
  border-radius: 5px;
  background-color: #a8a8a879;
  color: #fff;
}
.topbar__temp {
  display: flex;
  border-radius: 5px;
}
.topbar__temp input {
  opacity: 0;
  position: fixed;
  width: 0;
}
.topbar__temp label {
  display: inline-block;
  background-color: #07070715;
  padding: 17px 20px;
  cursor: pointer;
}
#temp-c {
  border-radius: 5px 0 0 5px;
}
#temp-f {
  border-radius: 0 5px 5px 0;
}
.topbar__temp input[type="radio"]:checked + label {
  background-color: #ffffff3d;
}
.topbar__controls a {
  text-decoration: none;
  margin-right: 10px;
}
.topbar__controls a:hover,
.topbar__controls a:visited,
.topbar__controls a:link {
  text-decoration: none;
  color: #ffffff;
}
.topbar__controls a:active {
  background: #e9e9e92d;
  border-radius: 5px;
}
.topbar__search form {
  display: flex;
  position: relative;
}
.topbar__search input[type="text"] {
  height: 50px;
  width: 300px;
  border: 1px solid #aeb5b97c;
  border-style: solid;
  border-right: none;
  padding-left: 15px;
  border-radius: 5px 0 0 5px;
  background: #4c5255a2;
}
.topbar__search input[type="text"]:focus {
  outline: none;
  background-color: rgba(255, 255, 255, 0.5);
  font-size: 18px;
  font-weight: 600;
  color: #fff;
}
.topbar__search input[type="text"]::placeholder {
  color: #fff;
  font-size: 14px;
  opacity: 1;
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
}
.topbar__search button {
  float: right;
  cursor: pointer;
  padding: 10px 20px 10px 20px;
  background: #aeb5b97c;
  border: none;
  border-radius: 0px 5px 5px 0;
  font-family: "Montserrat", sans-serif;
  font-size: 12px;
  font-weight: 600;
  color: #fff;
}
.topbar_temperature {
  display: flex;
  flex-direction: row;
}
.main {
  margin-bottom: 16vh;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.weather {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.weather__city h1 {
  font-size: 44px;
  text-transform: uppercase;
  margin: 0;
  font-weight: bold;
  margin-bottom: 5px;
}
.weather__datetime {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}
.weather__datetime h2 {
  font-size: 24px;
  text-transform: capitalize;
  margin: 0;
  font-weight: 600;
  padding-right: 10px;
}
.weather__main {
  display: flex;
  flex-direction: row;
  flex-shrink: 3;
}
.weather__temp {
  display: flex;
  font-size: 100px;
  overflow: visible;
}
.weather__temp h1 {
  font-size: 300px;
  margin: 0px;
}
.weather__wrapper {
  margin-left: 30px;
  display: flex;
  flex-direction: column;
  height: 85%;
}
.weather__sign {
  width: 100px;
  height: auto;
  margin: 0px;
}
.weather__details {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-grow: 1;
}
.weather__details h2 {
  margin: 0;
  font-size: 22px;
  text-transform: uppercase;
}
.weather__future {
  max-width: 30vw;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 22px;
  font-weight: bold;
}
.future__week-day {
  text-transform: uppercase;
}
.map {
  display: flex;
  flex-direction: column;
  margin: 10px 0 10px 0;
}
.map__map {
  width: 350px;
  height: 400px;
}
.map__coords {
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  margin-top: 15px;
}
.map__coords div {
  display: flex;
  flex-direction: row;
}
.map__coords div h2 {
  margin: 0;
}
/* styles for loader */
.loader {
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  width: 120px;
  height: 120px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
  position: absolute;
  left: calc(50% - 60px);
  top: calc(50% - 60px);
}

/* Safari */
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.autocomplete-active {
  /*when navigating through the items using the arrow keys:*/
  background-color: DodgerBlue !important;
  color: #ffffff;
}

@media only screen and (max-width: 1280px) {
  .wrapper {
    width: 90%;
  }
}

@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
  .map {
    display: none;
  }
  .weather {
    height: 95%;
    justify-content: space-around;
  }
  .weather__sign {
    height: 60px;
    width: 60px;
  }
  .weather__wrapper {
    margin: 0;
    height: 95%;
  }
  .weather__temp h1 {
    font-size: 150px;
  }
  .weather__details h2 {
    font-size: 16px;
  }
  .weather__future {
    max-width: 100%;
    font-size: 16px;
  }
  .wrapper {
    justify-content: flex-start;
  }
  .main {
    margin: 0;
    flex-grow: 1;
  }
  .topbar {
    margin-top: 60px;
  }
  .topbar__controls {
    justify-content: space-between;
  }
  .topbar__search {
    position: absolute;
    bottom: 92%;
    max-width: 90%;
  }
}

